@@ -54,6 +54,8 @@
                   <arg>jdk.compiler/com.sun.tools.javac.code=org.microbean.lang</arg>
                   <arg>--add-exports</arg>
                   <arg>jdk.compiler/com.sun.tools.javac.model=org.microbean.lang</arg>
+                  <arg>--add-exports</arg>
+                  <arg>jdk.compiler/com.sun.tools.javac.util=org.microbean.lang</arg>
                   <arg>-Xlint:-exports</arg>
                 </compilerArgs>
               </configuration>
@@ -66,6 +68,7 @@
             <argLine>
               --add-exports jdk.compiler/com.sun.tools.javac.code=org.microbean.lang
               --add-opens jdk.compiler/com.sun.tools.javac.model=org.microbean.lang
+              --add-exports jdk.compiler/com.sun.tools.javac.util=org.microbean.lang
               --enable-preview
             </argLine>
             <systemPropertyVariables>
